# jeefs

./: .gitignore  CLAUDE.md  CMakeLists.txt  EEPROM_FORMAT.md  LICENSE  LICENSE-APACHE  README.md  version.json
.github/workflows/: ci.yaml  ci.yml
docs/: TODO.md
docs/c/: README.md
docs/cpp/: README.md
docs/format/: filesystem-v1.md  header-common.md  header-v1.md  header-v2.md  header-v3.md
docs/python/: README.md
docs/rust/: README.md
eepromops-memory/: CMakeLists.txt  eepromops-memory.c
examples/: CMakeLists.txt
examples/c/: read_header.c
examples/cpp/: read_header.cpp
examples/python/: read_header.py
examples/rust/: read_header.rs
include/: debug.h  eepromerr.h  eepromops.h  err.h  jeefs.h  jeefs_generated.h  jeefs_header.h  jeefs_headerpp.hpp  jeefs_version.h  jeefspp.hpp
python/: README.md  pyproject.toml
python/jeefs/: __init__.py  constants.py  constants_generated.py  header.py
python/tests/: test_header.py
rust/jeefs-header/: Cargo.toml
rust/jeefs-header/src/: generated.rs  header.rs  lib.rs
src/: CMakeLists.txt  eepromops.c  jeefs.c  jeefs_header.c
srcpp/: CMakeLists.txt  jeefspp.cpp
test-vectors/: generate_vectors.py
test-vectors/reference/: eeprom_full.json  generate_reference.py
test-vectors/vectors/: v1_header_minimal.json  v2_header_minimal.json  v3_header_nosig.json  v3_header_secp256r1.json
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_eefs.c  tests-common.c  tests-common.h
tests/cross-language/: CMakeLists.txt  generate_c.c  generate_cpp.cpp  generate_py.py  run_gen_verify.cmake  verify_c.c  verify_cpp.cpp  verify_golden_c.c  verify_golden_cpp.cpp  verify_golden_py.py  verify_py.py
tests/test_00_formateeprom/: CMakeLists.txt  test_00.c
tests/test_01_addfiles/: CMakeLists.txt  test_01.c
tests/test_02_readfile/: CMakeLists.txt  test_02.c
tests/test_03_readfile/: CMakeLists.txt  test_03.c
tools/: pyproject.toml  sync_version.py
tools/jeefs_codegen/: __init__.py  __main__.py  models.py  parser.py  validator.py
tools/jeefs_codegen/generators/: __init__.py  c_generator.py  python_generator.py  rust_generator.py
