[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jeefs-header"
version = "0.1.2"
description = "JEEFS EEPROM header parser (JetHome EEPROM File System)"
license = "MIT OR GPL-2.0-or-later"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
