[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jeefs-codegen"
version = "0.1.0"
description = "JEEFS code generator — produces C and Python from markdown format specs"
license = "MIT OR GPL-2.0-or-later"
requires-python = ">=3.10"

[project.scripts]
jeefs-codegen = "jeefs_codegen.__main__:main"
