[package]
name = "jeefs-header"
version = "0.1.1"
edition = "2021"
license = "GPL-2.0+ OR MIT"
description = "JEEFS EEPROM header parsing library"

[dependencies]
crc32fast = { version = "1", default-features = false }
serde_json = { version = "1", optional = true }

[features]
default = ["std"]
std = ["crc32fast/std", "serde_json"]

[[bin]]
name = "verify_rs"
path = "src/bin/verify_rs.rs"
required-features = ["std"]

[[bin]]
name = "verify_golden_rs"
path = "src/bin/verify_golden_rs.rs"
required-features = ["std"]

[[bin]]
name = "generate_rs"
path = "src/bin/generate_rs.rs"
required-features = ["std"]

[[example]]
name = "read_header"
path = "../../examples/rust/read_header.rs"
required-features = ["std"]
