[package]
name = "jeefs-header"
version = "0.1.3"
edition = "2021"
license = "GPL-2.0+ OR Apache-2.0"
description = "JEEFS EEPROM header parsing library"
authors = ["Viacheslav Bocharov <vb@jethome.com>"]
repository = "https://github.com/jethome-iot/jeefs"
homepage = "https://github.com/jethome-iot/jeefs"
keywords = ["eeprom", "jethome", "jeefs", "embedded"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
crc32fast = { version = "1", default-features = false }
serde_json = { version = "1", optional = true }

[features]
default = ["std"]
std = ["crc32fast/std"]
bins = ["std", "serde_json"]

[[bin]]
name = "verify_rs"
path = "src/bin/verify_rs.rs"
required-features = ["bins"]

[[bin]]
name = "verify_golden_rs"
path = "src/bin/verify_golden_rs.rs"
required-features = ["bins"]

[[bin]]
name = "generate_rs"
path = "src/bin/generate_rs.rs"
required-features = ["bins"]

[[example]]
name = "read_header"
path = "../../examples/rust/read_header.rs"
required-features = ["std"]
